--- a/portafolio.html
+++ b/portafolio.html
@@ -19,19 +19,13 @@
         alt="Descripción de la imagen" width="300" height="200"> -->
     <nav>
         <ul>
-            <button class="button-secondary"><a href="#">Info</a></button>
             <button class="button-secondary"><a href="#">Proyects</a></button>
             <button class="button-secondary"><a href="formulario.html">contact</a></button>
         </ul>
     </nav>
     <main>
         <section>
-            <p class="texto-derecha" class="texto-centro-izquierda">Lorem ipsum dolor sit amet consectetur, adipisicing
-                elit. Possimus voluptatibus ipsum labore exercitationem placeat distinctio nemo numquam, et consequuntur
-                cupiditate, veniam cumque quibusdam assumenda atque? Quod illum maxime fugiat quo perferendis ipsam
-                officia, animi perspiciatis. Obcaecati hic molestiae nesciunt ab quo voluptate nihil voluptatum ducimus
-                corporis modi doloribus, voluptatem minus animi dignissimos ad, similique impedit, beatae possimus natus
-                officia harum!</p>
+            <p class="texto-derecha" class="texto-centro-izquierda">My name is dylan caicedo i am a student of back-end development, which means I work on the server-side of web applications. I am interested in creating dynamic and interactive websites that can handle data and logic.
         </section>
     </main>
 
